--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
     types: [published]
 
 jobs:
-  build_and_deploy:
-    name: Build and Deploy
+  build_and_upload:
+    name: Build and Upload
     runs-on: ubuntu-latest
     steps:
       - name: Checkout (main branch)
@@ -32,3 +32,15 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs
+
+  deploy:
+    name: Deploy
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build_and_upload
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
