Use better file name for the deployed pdf file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         run: docker run --rm -v .:/workdir texlive/texlive pdflatex -synctex=1 -interaction=nonstopmode -file-line-error -recorder mycv.tex
 
       - name: Prepare artifact
-        run: rm -rf docs/stable.pdf && cp mycv.pdf docs/stable.pdf
+        run: rm -rf docs/stable.pdf && cp mycv.pdf docs/Tianxiu_Zhou-Resume.pdf
 
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
